--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                                 <a href="pages/page3.html">Lines 'n Curves</a>
                             </li>
                             <li>
+                                <a href="pages/page4.html">Recur</a>
+                            </li>
+                            <li>
                                 <a href="#">CS Classes
                                     <span class="arrow">&#x25B6;</span>
                                 </a>
