--- a/pages/page3.html
+++ b/pages/page3.html
@@ -38,6 +38,9 @@
                 <a href="page3.html">Lines 'n Curves</a>
               </li>
               <li>
+                <a href="page4.html">Recur</a>
+              </li>
+              <li>
                 <a href="#">CS Classes
                   <span class="arrow">&#x25B6;</span>
                 </a>
